pk: Set the Daemon locale at start

Just in case we have a different locale than the system's

BUG: 424862